fix link multiple list overflow

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -1659,6 +1659,13 @@ table.no-margin {
     overflow: hidden;
 }
 
+.list > table td {
+    > .link-multiple-item {
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+}
+
 .list > table td[data-name="r-checkbox"] {
     overflow: visible;
 }
